5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1807_2569.log
== TEST (2019-06-11 12:07:43) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

m=sum(x)/size(m)

for i in range(size(x)):
	a[i]+=sqrt(x[i]-m)**2/max(x)-1
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:08:11) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

m=sum(x)/size(x)

for i in range(size(x)):
	a[i]+=sqrt(x[i]-m)**2/max(x)-1
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:08:32) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

m=sum(x)/size(x)
a=0
for i in range(size(x)):
	a[i]+=sqrt(x[i]-m)**2/max(x)-1
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:16:21) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]
	m=d/size(x)
	d+=sqrt((x[i]-m)**2)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:16:44) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]
	m=d/size(x)
	d+=sqrt((x[i]-m)**2)
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:17:06) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]
	m=d/size(x)
	d+=sqrt((x[i]-m)**2/max(x)-1)
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:17:20) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]
	m=d/size(x)
	d+=sqrt((x[i]-m)**2/(max(x)-1))
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:18:03) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]
	m=d/size(x)
	d+=sqrt((x[i]-m)**2/(max(x)-1))
print(round(d,3))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:18:21) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]
	m=d/size(x)
	d+=sqrt((x[i]-m)**2/(max(x)-1))
print(round(d,3))
print(round(m,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:20:51) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]
	m=d/size(x)
	d+=sqrt(x[i]-m**2/max(x)-1)
print(round(d,3))
print(round(m,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:21:32) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]
	m=d/size(x)
	d+=sqrt((x[i]-m)**2/max(x)-1)
print(round(d,3))
print(round(m,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:21:51) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]
	m=d/size(x)
	d+=sqrt((x[i]-m)**2/(max(x)-1))
print(round(d,3))
print(round(m,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:22:33) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]
	m=m/size(x)
	d+=sqrt((x[i]-m)**2/(max(x)-1))
print(round(d,3))
print(round(m,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:23:20) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m=sum(x)
	m=m/size(x)
	d+=sqrt((x[i]-m)**2/(max(x)-1))
print(round(d,3))
print(round(m,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:28:09) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m=sum(x)
	m=m/size(x)
	d+=sqrt((x[i]-m)**2)
	
print(round(d,3))
print(round(m,3))
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:33:19) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m=m+x[i]
	d+=sqrt((x[i]-m)**2)
	
print(round(d,3))
print(m)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:33:56) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m=m+x[i]/size(x)
	d+=sqrt((x[i]-m)**2)
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:37:22) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m=m+x[i]/size(x)
	d+=sqrt((x[i]-m)**2/size(x)-1)
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:37:39) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m=m+x[i]/size(x)
	d+=sqrt((x[i]-m)**2/(size(x)-1))
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:37:53) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m=m+x[i]/size(x)
	d+=sqrt((x[i]-m)**2)
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:42:24) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m=m+x[i]/size(x)
	d+=(x[i]-m)**2
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:43:52) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m=m+x[i]/size(x)
	d+=(x[i]-m)**2
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:44:04) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=(x[i]-m)**2
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:44:28) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=sqrt(x[i]-m)**2
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:44:46) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=sqrt((x[i]-m**2))
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:45:11) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=sqrt(((x[i]-m)**2))
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:45:15) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=sqrt(((x[i]-m)**2))
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:45:39) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=sqrt(x[i]-m**2)
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:45:58) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=sqrt(x[i]-m**2)
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:46:39) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=x[i]-m**2
	d=sqrt(d)
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:06:53) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=(x[i]-m)**2
	d=sqrt(d)
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:07:53) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=sqrt((x[i]-m)**2)
	
	
print(round(d,3))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 13:08:47) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=(x[i]-m)**2
	d=sqrt(d)
	
print(round(d,3))


-- EXECUTION TIME:
1.19131
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
45.686
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
26.754
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
1.089
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:08:48) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=(x[i]-m)**2
	d=sqrt(d)
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:09:07) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=(x[i]-m)**2
	d=sqrt(d/size(x)-1)
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:09:38) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=(x[i]-m)**2
	
	
	
print(round(d,3))
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:10:34) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=(x[i]-m)**2
	d=sqrt(d)
	
	
print(round(d,3))
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:25:18) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=(x[i]-m)**2
	d=sqrt(d/size(x)-1)
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:25:26) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=0
for i in range(size(x)):
	m+=x[i]/size(x)
	d+=(x[i]-m)**2
	d=sqrt(d/(size(x)-1))
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:26:27) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=sum(x)/size(x)

for i in range(size(x)):
	d+=(x[i]-m)**2
	d=sqrt(d/(size(x)-1))
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:27:13) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=sum(x)/size(x)

for i in x:
	d+=(x[i]-m)**2
	d=sqrt(d/(size(x)-1))
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:30:07) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=sum(x)/size(x)

for i in x:
	d+=(i-m)**2
	d=d/(size(x)-1
	d=sqrt(d)
	
	
print(round(d,3))


-- ERROR:
File "XXXX", line 11
    d=sqrt(d)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:30:26) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=sum(x)/size(x)

for i in x:
	d+=(i-m)**2
	a=d/(size(x)-1
	w=sqrt(a)
	
	
print(round(w,3))


-- ERROR:
File "XXXX", line 11
    w=sqrt(a)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:30:51) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=sum(x)/size(x)

for i in range(size(x)):
	d+=(x[i]-m)**2
	d=sqrt(d/(size(x)-1))
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:31:18) 
-- CODE:
from numpy import*
from math import*
x= array(eval(input("")))

d=0
m=sum(x)/size(x)

for i in range(size(x)):
	d+=(i-m)**2
	d=sqrt(d/(size(x)-1))
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:31:48) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
m=sum(x)/size(x)

for i in x:
	d+=(i-m)**2
	d=sqrt(d/(size(x)-1))
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:32:43) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
w=0
m=sum(x)/size(x)

for i in x:
	d+=(i-m)**2
	w=d/(size(x)-1)
	d=sqrt(w)
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:33:50) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0
w=0
m=sum(x)/size(x)

for g in x:
	d+=(g-m)**2
	w=d/(size(x)-1)
	d=sqrt(w)
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:34:16) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0

m=sum(x)/size(x)

for g in x:
	d+=(g -   m)**2
	w= d/(size(x)-1)
	d=sqrt(w)
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:34:25) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0

m=sum(x)/size(x)

for g in x:
	d+=(g -   m)**2
	w= d/(size(x)-1)
	d=sqrt(w)
	
	
print(round(d,3))


-- EXECUTION TIME:
1.19171
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
22.777
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
13.275
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.229
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:34:30) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0

m=sum(x)/size(x)

for g in x:
	d+=(g -   m)**2
	w= d/(size(x)-1)
	d= sqrt(w)
	
	
print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:35:45) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0

m=sum(x)/size(x)

for g in x:
	d += (g - m)**2
	w = d / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:36:06) 
-- CODE:
from numpy import*

x= array(eval(input("")))

d=0

m=sum(x)/size(x)

for g in x:
	d += (g - m)**2
	w = d / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))


-- EXECUTION TIME:
1.10927
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
